--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
 
+body {
+  font-family: Arial, sans-serif;
+}
 
+h1 {
+  margin-top: 30px;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.title {
+  font-weight: 900;
+  text-transform: uppercase;
+}
+
+.container {
+  width: 500px;
+  margin: 0 auto;
+}
+
+.game-area {
+  display: block;
+  border: 2px solid #595959;
+  border-top: 0;
+}
 /*# sourceMappingURL=style.css.map */
