--- a/style.css
+++ b/style.css
@@ -35,4 +35,20 @@ h1 {
   border-top: 0;
   background-color: rgba(255, 255, 255, 0.5);
 }
+
+.message {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 30px;
+  border: 1px solid #0e83b9;
+  font-size: 30px;
+  z-index: 2;
+}
 /*# sourceMappingURL=style.css.map */
